[package]
name = "test-rust-graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "6.0.6"
async-graphql-axum = "6.0.6"
async-stream = "0.3.5"
axum = "0.6.20"
futures-channel = "0.3.28"
futures-core = "0.3.28"
futures-util = "0.3.28"
once_cell = "1.18.0"
shuttle-axum = "0.27.0"
shuttle-runtime = "0.27.0"
shuttle-shared-db = { version = "0.27.0", features = ["postgres"] }
slab = "0.4.9"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1", features = ["sync"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }